(mew) csrf working

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,23 +3,24 @@
         There was a problem with your form. Please try again.
         {{/if}}</p>
     <form method="post" action="/profile/edit">
-    <div class="inputs profile"></div>
-
-        <label for="first_name">First Name</label>
-        <input type="text" name="first_name" placeholder="First Name" value="{{this.first_name}}">
-        <label for="last_name">Last Name</label>
-        <input type="text" name="last_name" placeholder="Last Name" value="{{this.last_name}}">
-        <label for="email">e-mail</label>
-        <input type="text" name="email" placeholder="e-mail" value="{{this.email}}">
-        <!-- <label for="password">Password</label>
-        <input type="password" name="password" placeholder="password"> -->
-        <label for="age">Age</label>
-        <input type="text" name="age" placeholder="age" value="{{this.age}}">
-        <label for="city">City</label>
-        <input type="text" name="city" placeholder="City" value="{{this.city}}">
-        <label for="homepage">Homepage</label>
-        <input type="text" name="homepage" placeholder="url" value="{{this.homepage}}">
-        <button type="submit" name="button">UPDATE</button>
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
+        <div class="inputs profile">
+            <label for="first_name">First Name</label>
+            <input type="text" name="first_name" placeholder="First Name" value="{{this.first_name}}">
+            <label for="last_name">Last Name</label>
+            <input type="text" name="last_name" placeholder="Last Name" value="{{this.last_name}}">
+            <label for="email">e-mail</label>
+            <input type="text" name="email" placeholder="e-mail" value="{{this.email}}">
+            <!-- <label for="password">Password</label>
+            <input type="password" name="password" placeholder="password"> -->
+            <label for="age">Age</label>
+            <input type="text" name="age" placeholder="age" value="{{this.age}}">
+            <label for="city">City</label>
+            <input type="text" name="city" placeholder="City" value="{{this.city}}">
+            <label for="homepage">Homepage</label>
+            <input type="text" name="homepage" placeholder="url" value="{{this.homepage}}">
+            <button type="submit" name="button">UPDATE</button>
+        </div>
 
     </form>
 
