--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,15 +3,18 @@
         There was a problem with your form. Please try again.
         {{/if}}</p>
     <form method="post" action="/register">
-    <div class="inputs register"></div>
-        <label for="first_name">First Name</label>
-        <input type="text" name="first_name" placeholder="First Name">
-        <label for="last_name">Last Name</label>
-        <input type="text" name="last_name" placeholder="Last Name">
-        <label for="email">e-mail</label>
-        <input type="text" name="email" placeholder="e-mail">
-        <label for="password">Password</label>
-        <input type="password" name="password" placeholder="password">
-        <button type="submit" name="button">SUBMIT</button>
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
+        <div class="inputs register">
+            <label for="first_name">First Name</label>
+            <input type="text" name="first_name" placeholder="First Name">
+            <label for="last_name">Last Name</label>
+            <input type="text" name="last_name" placeholder="Last Name">
+            <label for="email">e-mail</label>
+            <input type="text" name="email" placeholder="e-mail">
+            <label for="password">Password</label>
+            <input type="password" name="password" placeholder="password">
+            <button type="submit" name="button">SUBMIT</button>
+        </div>
     </form>
+
 <p class="redirect-p">If you are already a member, please <a href="/login">login</a></p>
